--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -24,7 +24,7 @@
   "features": {
     "pearlWax": {
       "title": "Pearl Wax",
-      "description": "Innovative technology that allows you to design and redesign your candle infinitely"
+      "description": "Reusable, flexible wax pearls—perfect for pouring into any vessel. A sustainable option that allows you to restyle your candle as many times as you like"
     },
     "fragrances": {
       "title": "Premium Fragrances",
