--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -24,7 +24,7 @@
   "features": {
     "pearlWax": {
       "title": "Cera Perlada",
-      "description": "Innovadora tecnología que te permite diseñar y rediseñar tu vela infinitas veces"
+      "description": "Perlas de cera flexibles y reutilizables, ideales para verter en cualquier recipiente. Una opción ecoamigable que te permite rediseñar tu vela tantas veces como quieras"
     },
     "fragrances": {
       "title": "Fragancias Premium",
